# icicle-jolt

./: README.md
.github/workflows/: cpp.yml  golang.yml  release.yml  rust.yml
examples/rust/msm/: Cargo.toml
examples/rust/msm/src/: main.rs
icicle/backend/cuda/: CMakeLists.txt
icicle/backend/cuda/include/: version.h
icicle/backend/cuda/include/gpu-utils/: device_initializer.h
icicle/backend/cuda/src/: cuda_device_api.cu
icicle/backend/cuda/src/field/: cuda_mont.cu
icicle/backend/cuda/src/msm/: cuda_msm.cu  cuda_msm.cuh  cuda_msm_g2.cu
wrappers/rust/icicle-curves/icicle-bn254/: Cargo.toml  build.rs
wrappers/rust/icicle-runtime/: Cargo.toml  build.rs
